# OpenTLD

./: .gitignore  CMakeLists.txt  README.md
src/libopentld/: CMakeLists.txt
src/libopentld/imacq/: ImAcq.cpp  ImAcq.h
src/libopentld/tld/: DetectorCascade.cpp  DetectorCascade.h  IDetectorCascade.h  IEnsembleClassifier.h  INNClassifier.h  IVarianceFilter.h  TLD.cpp  TLD.h  Timing.h
src/libopentld/tld/detector/: DetectorCascade.cpp  DetectorCascade.h  EnsembleClassifier.cpp  EnsembleClassifier.h  NNClassifier.cpp  NNClassifier.h  VarianceFilter.h
src/libopentld/tld/detector/cuda/: CUDA.h  CuDetectorCascade.cpp  CuDetectorCascade.h  CuEnsembleClassifier.cpp  CuEnsembleClassifier.h  CuVarianceFilter.cpp  CuVarianceFilter.h  ensembleClassifier.cu  varianceFilter.cu
src/libopentld/tld/detector/cuda/npp/: NCV.cu
src/opentld/: CMakeLists.txt
src/opentld/main/: Config.cpp  Gui.cpp  Main.cpp  Main.h  Settings.cpp  Settings.h  Trajectory.cpp  Trajectory.h
